--- a/pages/payroll-application-3.html
+++ b/pages/payroll-application-3.html
@@ -169,24 +169,37 @@
             <div class="each__detail--input">
                 <select class="textarea">
                     <option value="0" selected disabled>Don’t use an award</option>
+                    <option value="0" >Don’t use an award</option>
+                    <option value="0" >Don’t use an award</option>
+                    <option value="0" >Don’t use an award</option>
                 </select>
                 <label for='userId' class='select__label'>Award Name</label>
             </div>
             <div class="each__detail--input">
                 <select class="textarea">
                     <option value="0" selected disabled>Don’t use an agreement</option>
+                    <option value="0" >Don’t use an agreement</option>
+                    <option value="0" >Don’t use an agreement</option>
+                    <option value="0" >Don’t use an agreement</option>
                 </select>
                 <label for='userId' class='select__label'>Employment Agreement</label>
             </div>
             <div class="each__detail--input">
                 <select class="textarea">
                     <option value="0" selected disabled>Use time sheets to submit all time worked</option>
+                    <option value="0" >Use time sheets to submit all time worked</option>
+                    <option value="0" >Use time sheets to submit all time worked</option>
+                    <option value="0" >Use time sheets to submit all time worked</option>
+                    <option value="0" >Use time sheets to submit all time worked</option>
                 </select>
                 <label for='userId' class='select__label'>Time Sheets</label>
             </div>
             <div class="each__detail--input">
                 <select class="textarea">
                     <option value="0" selected disabled>Pickle Jobs</option>
+                    <option value="0">Pickle Jobs</option>
+                    <option value="0">Pickle Jobs</option>
+                    <option value="0">Pickle Jobs</option>
                 </select>
                 <label for='userId' class='select__label'>Prime Location</label>
             </div>
@@ -198,18 +211,27 @@
             <div class="each__detail--input">
                 <select class="textarea">
                     <option value="0" selected disabled>Manually Set pay rates</option>
+                    <option value="0" >Manually Set pay rates</option>
+                    <option value="0" >Manually Set pay rates</option>
+                    <option value="0" >Manually Set pay rates</option>
                 </select>
                 <label for='userId' class='select__label'>Pay Rate Template</label>
             </div>
             <div class="each__detail--input">
                 <select class="textarea">
                     <option value="0" selected disabled>Select Pay schedule</option>
+                    <option value="0" >Select Pay schedule</option>
+                    <option value="0" >Select Pay schedule</option>
+                    <option value="0" >Select Pay schedule</option>
                 </select>
                 <label for='userId' class='select__label'>Pay Schedule</label>
             </div>
             <div class="each__detail--input">
                 <select class="textarea">
                     <option value="0" selected disabled>Payment Type per hour</option>
+                    <option value="0" >Payment Type per hour</option>
+                    <option value="0" >Payment Type per hour</option>
+                    <option value="0" >Payment Type per hour</option>
                 </select>
                 <label for='userId' class='select__label'>Payment Type</label>
             </div>
