--- a/pages/job-active.html
+++ b/pages/job-active.html
@@ -211,13 +211,13 @@
                             <td>10</td>
                             <td>1</td>
                             <td class="d-flex">
-                                <div class="action__btn recent__invitation">
-                                    <svg  width="24" height="24" viewBox="0 0 14 4" fill="none"
+                                <div class="job__list action__btn">
+                                    <svg class="svg__action" id="svg"  width="24" height="24" viewBox="0 0 14 4" fill="none"
                                           xmlns="http://www.w3.org/2000/svg">
                                         <path d="M1.99992 0.333496C1.08325 0.333496 0.333252 1.0835 0.333252 2.00016C0.333252 2.91683 1.08325 3.66683 1.99992 3.66683C2.91659 3.66683 3.66659 2.91683 3.66659 2.00016C3.66659 1.0835 2.91659 0.333496 1.99992 0.333496ZM11.9999 0.333496C11.0833 0.333496 10.3333 1.0835 10.3333 2.00016C10.3333 2.91683 11.0833 3.66683 11.9999 3.66683C12.9166 3.66683 13.6666 2.91683 13.6666 2.00016C13.6666 1.0835 12.9166 0.333496 11.9999 0.333496ZM6.99992 0.333496C6.08325 0.333496 5.33325 1.0835 5.33325 2.00016C5.33325 2.91683 6.08325 3.66683 6.99992 3.66683C7.91658 3.66683 8.66658 2.91683 8.66658 2.00016C8.66658 1.0835 7.91658 0.333496 6.99992 0.333496Z"
                                               fill="#F16532"/>
                                     </svg>
-                                    <div class="invitation__recent--container">
+                                    <div class="invitation__recent--container job__actions">
                                         <ul>
                                             <li>Edit</li>
                                             <li>Delete</li>
@@ -238,12 +238,18 @@
                             <td>23</td>
                             <td>2</td>
                             <td class="d-flex">
-                                <div class="action__btn">
-                                    <svg  width="24" height="24" viewBox="0 0 14 4" fill="none"
-                                          xmlns="http://www.w3.org/2000/svg">
+                                <div class="job__list action__btn">
+                                    <svg class="svg__action"id="svg2"  width="24" height="24" viewBox="0 0 14 4" fill="none"
+                                         xmlns="http://www.w3.org/2000/svg">
                                         <path d="M1.99992 0.333496C1.08325 0.333496 0.333252 1.0835 0.333252 2.00016C0.333252 2.91683 1.08325 3.66683 1.99992 3.66683C2.91659 3.66683 3.66659 2.91683 3.66659 2.00016C3.66659 1.0835 2.91659 0.333496 1.99992 0.333496ZM11.9999 0.333496C11.0833 0.333496 10.3333 1.0835 10.3333 2.00016C10.3333 2.91683 11.0833 3.66683 11.9999 3.66683C12.9166 3.66683 13.6666 2.91683 13.6666 2.00016C13.6666 1.0835 12.9166 0.333496 11.9999 0.333496ZM6.99992 0.333496C6.08325 0.333496 5.33325 1.0835 5.33325 2.00016C5.33325 2.91683 6.08325 3.66683 6.99992 3.66683C7.91658 3.66683 8.66658 2.91683 8.66658 2.00016C8.66658 1.0835 7.91658 0.333496 6.99992 0.333496Z"
                                               fill="#F16532"/>
                                     </svg>
+                                    <div class="invitation__recent--container job__actions">
+                                        <ul>
+                                            <li>Edit</li>
+                                            <li>Delete</li>
+                                        </ul>
+                                    </div>
                                 </div>
                             </td>
                         </tr>
@@ -259,12 +265,18 @@
                             <td>52</td>
                             <td>1</td>
                             <td class="d-flex">
-                                <div class="action__btn">
-                                    <svg  width="24" height="24" viewBox="0 0 14 4" fill="none"
-                                          xmlns="http://www.w3.org/2000/svg">
+                                <div class="job__list action__btn">
+                                    <svg class="svg__action" id="svg3"  width="24" height="24" viewBox="0 0 14 4" fill="none"
+                                         xmlns="http://www.w3.org/2000/svg">
                                         <path d="M1.99992 0.333496C1.08325 0.333496 0.333252 1.0835 0.333252 2.00016C0.333252 2.91683 1.08325 3.66683 1.99992 3.66683C2.91659 3.66683 3.66659 2.91683 3.66659 2.00016C3.66659 1.0835 2.91659 0.333496 1.99992 0.333496ZM11.9999 0.333496C11.0833 0.333496 10.3333 1.0835 10.3333 2.00016C10.3333 2.91683 11.0833 3.66683 11.9999 3.66683C12.9166 3.66683 13.6666 2.91683 13.6666 2.00016C13.6666 1.0835 12.9166 0.333496 11.9999 0.333496ZM6.99992 0.333496C6.08325 0.333496 5.33325 1.0835 5.33325 2.00016C5.33325 2.91683 6.08325 3.66683 6.99992 3.66683C7.91658 3.66683 8.66658 2.91683 8.66658 2.00016C8.66658 1.0835 7.91658 0.333496 6.99992 0.333496Z"
                                               fill="#F16532"/>
                                     </svg>
+                                    <div class="invitation__recent--container job__actions">
+                                        <ul>
+                                            <li>Edit</li>
+                                            <li>Delete</li>
+                                        </ul>
+                                    </div>
                                 </div>
                             </td>
                         </tr>
