--- a/pages/employee-details.html
+++ b/pages/employee-details.html
@@ -412,6 +412,7 @@
                                         <thead>
                                         <tr>
                                             <th scope="col">Name</th>
+                                            <th scope="col"></th>
                                             <th scope="col">File Size</th>
                                             <th scope="col">Actions</th>
                                         </tr>
@@ -419,6 +420,7 @@
                                         <tbody>
                                         <tr class="border__tr">
                                             <td>Contract</td>
+                                            <td></td>
                                             <td>max 2020</td>
                                             <td>
                                                 <a href="#" class="action__link">Remove</a>
@@ -426,6 +428,7 @@
                                         </tr>
                                         <tr>
                                             <td>Compliance document</td>
+                                            <td></td>
                                             <td>max 2020</td>
                                             <td>
                                                 <a href="#" class="action__link">Remove</a>
@@ -448,6 +451,7 @@
                                         <thead>
                                         <tr>
                                             <th scope="col">Name</th>
+                                            <th scope="col"></th>
                                             <th scope="col">File Size</th>
                                             <th scope="col">Actions</th>
                                         </tr>
@@ -455,6 +459,7 @@
                                         <tbody>
                                         <tr class="border__tr">
                                             <td>Resume</td>
+                                            <td></td>
                                             <td>max 2020</td>
                                             <td>
                                                 <a href="#" class="action__link">Remove</a>
@@ -462,6 +467,7 @@
                                         </tr>
                                         <tr>
                                             <td>Master of Business</td>
+                                            <td></td>
                                             <td>max 2020</td>
                                             <td>
                                                 <a href="#" class="action__link">Remove</a>
@@ -653,20 +659,20 @@
                             </select>
                             <label for='userId' class='select__label'>Actions</label>
                         </div>
-                        <div class="text__area-note position-relative">
-                            <div class="dropzone">
+                        <div class="text__area-note position-relative dropzone">
+                            <input class="dropzone__input--file" type="file">
                                 <p>Drag & Drop Files here</p>
                                 <i class="fa fa-paperclip" aria-hidden="true"></i>
-                            </div>
+                            </input>
                         </div>
                         <div class="attachment__container">
                             <div>
                                 <i class="fa fa-files-o" aria-hidden="true"></i>
                                 <span>Documentname1.</span>
                             </div>
-                            <div>
+                            <button class="hr__document--dlt">
                                 <i class="fa fa-trash-o" aria-hidden="true"></i>
-                            </div>
+                            </button>
 
                         </div>
                     </div>
