--- a/pages/payroll-entry-verified.html
+++ b/pages/payroll-entry-verified.html
@@ -436,7 +436,7 @@
             </div>
         </div>
 
-        <div class="payroll__table--container">
+        <div class="payroll__table--container fix__width">
             <div class="tab-content" id="nav-tabContent">
                 <div class="tab-pane fade" id="pending-payroll" role="tabpanel" aria-labelledby="nav-profile-tab">
                     <h3 class="table__heading">List</h3>
