--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -38,10 +38,10 @@
         <div class="line-three"></div>
     </div>
     <div class="header__profile--container">
-        <div class="header__business--profile">
+        <div class="header__business--profile" id="account">
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#F16532" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-globe"><circle cx="12" cy="12" r="10"></circle><line x1="2" y1="12" x2="22" y2="12"></line><path d="M12 2a15.3 15.3 0 0 1 4 10 15.3 15.3 0 0 1-4 10 15.3 15.3 0 0 1-4-10 15.3 15.3 0 0 1 4-10z"></path></svg>
             <div>
-                <h2>Business Profiles</h2>
+                <h2 class="header__profile">Business Profiles</h2>
                 <p>Cracker JAck Hospitality</p>
             </div>
             <svg width="12" height="9" viewBox="0 0 12 9" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -49,6 +49,16 @@
                       fill="#F6ECE1"/>
             </svg>
         </div>
+        <ul class="profile-dropdown drop-show" id="profileMenu2">
+            <li class="li__one">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#F16532" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-user"><path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path><circle cx="12" cy="7" r="4"></circle></svg>
+                <a href="#">Account Profile</a>
+            </li>
+            <li class="li__two">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#F16532" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-user"><path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path><circle cx="12" cy="7" r="4"></circle></svg>
+                <a href="#">Own Profile</a>
+            </li>
+        </ul>
         <div class="header__right--container">
             <div class="chat__notification">
                 <a href="./chat.html">
