--- a/pages/new-listing.html
+++ b/pages/new-listing.html
@@ -194,12 +194,14 @@
                     <input class='textarea' name='UserId' placeholder="How many..."/>
                     <br>
                     <label for='userId' class='label'>Question 1</label>
-                    <i class="fa fa-trash-o" aria-hidden="true"></i>
+                    <button>
+                        <i class="fa fa-trash-o" aria-hidden="true"></i>
+                    </button>
                 </div>
-                <div class="add__question">
+                <button class="add__question">
                     <i class="fa fa-plus" aria-hidden="true"></i>
                     <span>Add questions</span>
-                </div>
+                </button>
                 <div class="publish__job">
                     <label class="checkbox__container">Publish to Jobs Board
                         <input type="checkbox">
