header message icon

--- a/pages/verification-code.html
+++ b/pages/verification-code.html
@@ -28,7 +28,7 @@
 </head>
 <body>
 <section class="color__bg--section">
-  <div class="row align-items-center justify-content-center vh-100">
+  <div class="row align-items-center justify-content-center vh-100 m-0">
     <div class="col-lg-4 col-md-6 col-sm-12 col-12">
       <div class="signup__content--container verification__mail--container">
         <div class="signin__top--content d-flex justify-content-between">
