--- a/pages/chat.html
+++ b/pages/chat.html
@@ -53,7 +53,9 @@
         <div class="header__right--container">
             <div class="chat__notification">
                 <a href="./chat.html">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#F16532" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-message-square"><path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"></path></svg>
+                    <svg width="18" height="19" viewBox="0 0 18 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M17.3333 5.8196V13.3363C17.3333 14.2529 16.5833 15.0029 15.6666 15.0029H3.99996L0.666626 18.3363V3.33626C0.666626 2.4196 1.41663 1.6696 2.33329 1.6696H10.75C10.7 1.93626 10.6666 2.2196 10.6666 2.50293C10.6666 4.80293 12.5333 6.6696 14.8333 6.6696C15.775 6.6696 16.6333 6.3446 17.3333 5.8196ZM12.3333 2.50293C12.3333 3.88626 13.45 5.00293 14.8333 5.00293C16.2166 5.00293 17.3333 3.88626 17.3333 2.50293C17.3333 1.1196 16.2166 0.00292969 14.8333 0.00292969C13.45 0.00292969 12.3333 1.1196 12.3333 2.50293Z" fill="#F16532"/>
+                    </svg>
                 </a>
             </div>
             <div class="header__profile--details" id="profile">
