--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -42,10 +42,10 @@
         <div class="dropdown header__business--profile">
             <button class="dropdown-toggle" type="button" id="headerdropdown" data-bs-toggle="dropdown" aria-expanded="false">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#F16532" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-globe"><circle cx="12" cy="12" r="10"></circle><line x1="2" y1="12" x2="22" y2="12"></line><path d="M12 2a15.3 15.3 0 0 1 4 10 15.3 15.3 0 0 1-4 10 15.3 15.3 0 0 1-4-10 15.3 15.3 0 0 1 4-10z"></path></svg>
-                <span>
-                    <h2 class="header__profile">Business Profiles</h2>
-                    <p>Cracker JAck Hospitality</p>
-                </span>
+                <ul class="nav__profile--ul">
+                    <li class="header__profile">Business Profiles</li>
+                    <li>Cracker JAck Hospitality</li>
+                </ul>
             </button>
             <ul class="dropdown-menu" aria-labelledby="headerdropdown">
                 <li><a class="dropdown-item li__one" href="#">
