--- a/pages/demo.html
+++ b/pages/demo.html
@@ -4,12 +4,7 @@
     <meta charset="UTF-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <link rel="preconnect" href="https://fonts.googleapis.com"/>
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
-    <link
-            href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;1,300&display=swap"
-            rel="stylesheet"
-    />
+
     <!--      Bootstrap     -->
 
     <link rel="stylesheet" href="../resources/css/bootstrap.min.css"/>
@@ -24,8 +19,8 @@
     <script src="../resources/js/jquery.min.js"></script>
     <script src="../resources/js/bootstrap.min.js"></script>
     <script src="../resources/js/bootstrap.bundle.min.js"></script>
-    <script src="../resources/js/dashboard.js"></script>
     <script src="../resources/js/site.js"></script>
+    <script src="../resources/js/toaster.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.6/Chart.bundle.min.js"></script>
 
     <title>Saucedlt | DEMO</title>
@@ -168,6 +163,45 @@
             <h3>Demo&nbsp;&nbsp;&nbsp;>&nbsp;&nbsp;&nbsp;Page</h3>
         </div>
 
+        <div class="toaster__container">
+            <button type="button" class="success__toaster--btn " id="successToaster">Success</button>
+            <button type="button" class="danger__toaster--btn" id="dangerToaster">Danger</button>
+            <div class="position-fixed top-0 end-0 p-3 toaster__z--index">
+                <div id="successToasterMsg" class="toast hide" role="alert" aria-live="assertive" aria-atomic="true">
+                    <div class="toast-body">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-check"><polyline points="20 6 9 17 4 12"></polyline></svg>
+                        Hello, world! This is a success toast message.
+                    </div>
+                </div>
+            </div>
+
+            <div class="position-fixed top-0 end-0 p-3 toaster__z--index">
+                <div id="dangerToasterMsg" class="toast hide" role="alert" aria-live="assertive" aria-atomic="true">
+                    <div class="toast-body toast__body--danger ">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-check"><polyline points="20 6 9 17 4 12"></polyline></svg>
+                        Hello, world! This is a danger toast message.
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="progress__bar--container">
+            <h1>Progress Bar</h1>
+
+            <p>
+                <button data-toggle="progressbar" data-target="#myProgressbar" data-value="0" class="btn btn-default">0%</button>
+                <button data-toggle="progressbar" data-target="#myProgressbar" data-value="10" class="btn btn-default">10%</button>
+                <button data-toggle="progressbar" data-target="#myProgressbar" data-value="30" class="btn btn-default">30%</button>
+                <button data-toggle="progressbar" data-target="#myProgressbar" data-value="75" class="btn btn-default">75%</button>
+                <button data-toggle="progressbar" data-target="#myProgressbar" data-value="100" class="btn btn-default">100%</button>
+            </p>
+
+            <div id="myProgressbar" class="progress">
+                <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%;">
+                    <span class="sr-only">0%</span>
+                </div>
+            </div>
+        </div>
     </div>
     <footer>
         <div class="footer__container">
@@ -189,5 +223,9 @@
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-
 beta1/dist/js/bootstrap.bundle.min.js"></script>
+
+<script>
+
+</script>
 </body>
 </html>
