--- a/pages/demo.html
+++ b/pages/demo.html
@@ -202,6 +202,15 @@
                 </div>
             </div>
         </div>
+
+        <div class="page__loader--container">
+<!--            <div class="each__spinner">-->
+<!--                <div class="div" style="transform: rotate(360deg);"></div>-->
+<!--            </div>-->
+            <div class="each__spinner" style="background: red">
+                <div class="circle"></div>
+            </div>
+        </div>
     </div>
     <footer>
         <div class="footer__container">
